# crypto-ai-trading

./: .env.example  .gitignore  INFO.md  TODO.md  aaa.py  calculate-indicators.py  compare-orgiginal-processed.ipynb  compare-orginal-processed.ipynb  data-collection.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  test-model copy.ipynb  test-model.ipynb  test_preprocessed_data.ipynb  train.ipynb  train.py
DataCollection/: data-collection.py
PreTraining/: train.ipynb
Preprocessing/: Dockerfile  Makefile  custom_ld.so.conf  docker-compose.yml  main.c
Preprocessing/src/: main.c
Results/: reward_history_20230111-151114.csv  reward_history_20230111-151318.csv  reward_history_20230111-151540.csv  reward_history_20230111-151748.csv  test_reward_history_20230111-132758.csv
Training/: ActionSpace.py  CryptoAgent.py  CryptoEnv.py  CryptoEnv_00.py  CryptoEnv_01.py  CryptoEnvironment.py  CryptoModel.py  CustomTBCallback.py  label_data.py  test_env.py  train.py  train_debug.py
Training/Algorithms/: Algorithm1.py  CrypoAlgorithm.py  CryptoAlgorithm_02.py
